@@ -1,3 +1,4 @@
+2343 [x264] fixed wrong detection of errors if file name contains "error"
 2342 [OneClick] enhanced error handling
 
 Changelog 2308 --> 2341
